Chrome - Stepping It Up
Completely redone Chrome extension for testing.

Store imminent. We got a foe.

--- a/chrome/psdle/_locales/en/messages.json
+++ b/chrome/psdle/_locales/en/messages.json
@@ -14,5 +14,9 @@
 	"repo": {
 		"message": "Repository",
 		"description": "Repository link text in the popup."
+	},
+	"pageActionRun": {
+		"message": "Run PSDLE",
+		"description": "Text for the page action's tooltip indicating to run (start/execute/launch) PSDLE."
 	}
 }
