PSDLE - Arabic fix
Also fixed table's text alignment.

--- a/_src/lang/all/ar.json
+++ b/_src/lang/all/ar.json
@@ -49,7 +49,7 @@
             "dlList": "لائحة الألعاب",
             "plus": "ضبط ظاهرية العاب PlayStation Plus",
             "queueAll": "الكل",
-            "queueTo": "$SYS$ حَمل الى",
+            "queueTo": "حَمل الى $SYS$",
             "noTarget": "لا يوجد جهاز للتحميل اليه",
             "exportColumnName": "أسم العمود",
             "exportProperty": "الخصائص"
