PSDLE - Allow export config import/export
Someone's going to complain (ha!) but it makes exporting the config simpler.

I'm not a fan of the array usage either, and I'm too lazy to simulate named constants.

--- a/_src/lang/all/en.json
+++ b/_src/lang/all/en.json
@@ -50,7 +50,8 @@
             "queueTo": "Download to $SYS$",
             "noTarget": "There is no available target console to send to.",
             "exportColumnName": "Column Name",
-            "exportProperty": "Property"
+            "exportProperty": "Property",
+            "exportImport": "Import"
         },
         "apis": [{
             "internalID": "api_entitle",
